==> Huashoune/STM32_F429_YeHuo/35-WWDG—窗口看门狗/视频配套程序/User/wwdg/bsp_wwdg.c <==
#include "bsp_wwdg.h"


//用于记录看门狗 递减计数器的值，方便喂狗函数直接使用
static uint8_t wwdg_cnt ;

// WWDG 中断优先级初始化
static void WWDG_NVIC_Config(void)
{
  NVIC_InitTypeDef NVIC_InitStructure; 
  
  NVIC_PriorityGroupConfig(NVIC_PriorityGroup_1); 
  NVIC_InitStructure.NVIC_IRQChannel = WWDG_IRQn;
  NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;
  NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;
  NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
  NVIC_Init(&NVIC_InitStructure);
}


/* WWDG 配置函数
 * tr ：递减计时器的值， 取值范围为：0x7f~0x40，超出范围会直接复位
 * wr ：窗口值，取值范围为：0x7f~0x40
 * prv：预分频器值，取值可以是
 *      @arg WWDG_Prescaler_1: WWDG counter clock = (PCLK1(45MHz)/4096)/1  约10968Hz 91us
 *      @arg WWDG_Prescaler_2: WWDG counter clock = (PCLK1(45MHz)/4096)/2	 约5484Hz	182us
 *      @arg WWDG_Prescaler_4: WWDG counter clock = (PCLK1(45MHz)/4096)/4	 约2742Hz	364us
 *      @arg WWDG_Prescaler_8: WWDG counter clock = (PCLK1(45MHz)/4096)/8  约1371Hz	728us
 *      
 *			例：tr = 127(0x7f，tr的最大值)  wr = 80（0x50, 0x40为最小wr最小值）  prv =  WWDG_Prescaler_8
 *			~728 * (127-80) = 34.2ms < 刷新窗口 < ~728 * 64 = 46.6ms
 *			也就是说调用WWDG_Config进行这样的配置，若在之后的34.2ms前喂狗，系统会复位，在46.6ms后没有喂狗，系统也会复位。
 *			需要在刷新窗口的时间内喂狗，系统才不会复位。	
*/
void WWDG_Config(uint8_t tr, uint8_t wr, uint32_t prv)
{	
	
	wwdg_cnt = tr;//保存CNT配置，用在喂狗函数
	
	// 开启 WWDG 时钟
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_WWDG, ENABLE);
	
	// 设置预分频器的值
	WWDG_SetPrescaler( prv );
	
	// 设置上窗口值
	WWDG_SetWindowValue( wr );
	
	// 设置计数器的值，使能WWDG
	WWDG_Enable(tr);	
	
	// 清除提前唤醒中断标志位
	WWDG_ClearFlag();	
	// 配置WWDG中断优先级
	WWDG_NVIC_Config();	
	// 开WWDG 中断
	WWDG_EnableIT();
}


// 喂狗
void WWDG_Feed(void)
{
	// 喂狗，刷新递减计数器的值，设置成最大WDG_CNT=0X7F
	WWDG_SetCounter( wwdg_cnt );
}
